...
import '../common/widgets.dart';
import '../common/theme.dart';


class SignIn extends StatefulWidget {
  static String tag = 'signin-page';
  SignIn({this.onSignedIn, this.isAdmin});
  final VoidCallback onSignedIn;
  final VoidCallback isAdmin;

  @override
  _SignInState createState() => _SignInState();
}
...
          if (value == false){
            isBannedCheck(user.uid) .then((value) =>
            {
              // Normal User
              if(value == '0'){ // User not banned
                formKey.currentState.reset(),
                displayToastMessage("Login Successful", context),
                //Change AuthStatus
                widget.onSignedIn()
              } else if (value == '1'){
                // User is banned for 30 Days
                formKey.currentState.reset(),
                displayToastMessage("Your account is banned for 30 days", context)
              } else {
                // User Banned Forever
                formKey.currentState.reset(),
                displayToastMessage("Your account is banned", context)
              }
            })
          } else {
            // Admin
            formKey.currentState.reset(),
            displayToastMessage("Login Successful", context),
...
            widget.isAdmin()
          }
        })
      } else {
        // if login not successful
        formKey.currentState.reset(),
        displayToastMessage("Wrong Email/Password", context)
      }
    });
  }

  bool validate() {
    final form = formKey.currentState;
...
                              fontSize: 35,
                            ),
                          ),
                        ),
                        SizedBox(height: 20),
                        TextFormField(
                            key: const ValueKey('email'),
                            validator: (value)=> value.isEmpty ? "Email Required" : !value.contains("@") ? "Invalid Email" : null,
                            controller: emailController,
                            decoration: InputDecoration(
                                filled: true,
                                fillColor: offWhite,
                                hintText: 'Email')),
                        SizedBox(height: 5),
                        TextFormField(
                            key: const ValueKey('password'),
                            obscureText: true,
                            validator: (value)=> value.isEmpty ? "Password Required": null,
                            controller: passwordController,
                            decoration: InputDecoration(
                                filled: true,
                                fillColor: offWhite,
                                hintText: 'Password')),
                        SizedBox(height: 20),
                        CustomButton(
                            btnKey: 'Login',
                            btnText: 'Log In',
                            btnPressed: (){
                              // Login Validation
                              if(validate()) {
                                // Sign in with email and password
                                loginUserClick();
...
                                    child: Divider(color:offWhite, thickness:2)
                                ),
                              ]
                          ),
                        ),
                        CustomButton(
                            btnKey: 'Register',
                            btnText: 'Register',
                            btnPressed: (){
                              registerUserClick();
                            }
                        ),
                        SizedBox(height: 100),
...
